@@ -1,2 +1,2 @@
-@comment $NetBSD: PLIST,v 1.3 1999/08/10 12:19:08 agc Exp $
-bin/tkdiff3
+@comment $NetBSD: PLIST,v 1.1 2001/11/01 01:27:03 zuntum Exp $
+bin/tkdiff4
